list page spacing fix and booking page succces dialog fix

--- a/src/app/available-classes/available-classes.component.css
+++ b/src/app/available-classes/available-classes.component.css
@@ -3,3 +3,8 @@
     width: 60%;
     padding: 10px;
 }
+
+.custom.mat-card{
+    max-width: 500px; 
+    margin: 20px;
+}
